# Real-World-ML-Project-rebuild

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deployments/dev/candles/: deployment.yaml
deployments/dev/grafana/: grafana.yaml  install.sh
deployments/dev/kafka/: install_kafka.sh  install_kafka_ui.sh  kafka-ui.yaml  kafka.yaml
deployments/dev/kind/: create_cluster.sh  kind-with-portmapping.yaml
deployments/dev/mlflow/: install.sh  mlflow.yaml
deployments/dev/predictor/: cronjob.yaml  deployment.yaml
deployments/dev/risingwave/: apply_views.sh  install.sh  materialized_views.sql  risingwave.toml  risingwave.yaml
deployments/dev/technical_indicators/: deployment.yaml
deployments/dev/trades/: deployment.yaml  kustomization.yaml
docs/: 00-roadmap.md  01-session-0-environment.md  02-crypto-mvp.md  03-llm-project.md  04-glossary.md  README.md  context-for-agent.md  progress.md
scripts/: build-and-push-image.sh  deploy.sh  spin-up.sh  teardown.sh
services/candles/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/candles/src/candles/: __main__.py  config.py  logging.py  main.py
services/predictor/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/predictor/data/: .gitignore
services/predictor/src/predictor/: __main__.py  config.py  feature_loader.py  logging.py  main.py  schemas.py  train.py
services/technical_indicators/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/technical_indicators/src/technical_indicators/: __main__.py  config.py  logging.py  main.py
services/trades/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/trades/src/trades/: config.py  kafka_producer.py  kraken_api.py  logging.py  main.py  schemas.py
