# Candles service — consumes raw trades from Kafka, aggregates into 1-min OHLCV candles,
# and produces them to a new Kafka topic.

[project]
name = "candles"
version = "0.1.0"
description = "Kafka consumer that windows raw trades into 1-min OHLCV candles"
requires-python = ">=3.12"
dependencies = [
    "quixstreams>=3.0",       # Stream processing: windowing + aggregation
    "pydantic-settings>=2.0", # Configuration via environment variables
    "loguru>=0.7",            # Structured logging
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
