# Predictor service — loads a trained model from MLflow and makes real-time
# predictions on features consumed from Kafka.

[project]
name = "predictor"
version = "0.1.0"
description = "Real-time price predictor: consumes features from Kafka, predicts via XGBoost, produces to predictions topic"
requires-python = ">=3.12"
dependencies = [
    "quixstreams>=3.0",       # Kafka consume/produce
    "xgboost>=2.0",           # Model framework
    "mlflow>=2.15,<3",        # Model registry + tracking (pin <3 to match server v2.21.3)
    "psycopg2-binary>=2.9",   # Connect to RisingWave for training data
    "pydantic-settings>=2.0", # Configuration via environment variables
    "loguru>=0.7",            # Structured logging
    "polars>=1.0",            # Fast DataFrames for training
    "numpy>=1.26",            # Numeric operations
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
