[project]
name = "technical-indicators"
version = "0.1.0"
description = "Computes technical indicators (EMA, RSI, MACD) from candles and publishes to features topic"
requires-python = ">=3.13"
dependencies = [
    "quixstreams>=3.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/technical_indicators"]
