[project]
name = "trades"
version = "0.1.0"
description = "Kraken WebSocket client that produces live crypto trades to Kafka"
requires-python = ">=3.12"
dependencies = [
    "websockets>=14.0",
    "kafka-python-ng>=2.2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trades"]
